add categories CRUD controller, routes and swagger tags
