# routes/categories.js
@@ -1,12 +1,13 @@
 const express = require('express');
 const router = express.Router();
 const categoriesController = require('../controllers/categories');
+const { categoryValidationRules, validate } = require('../middleware/categories');
 
-// CRUD operations
 router.get('/', categoriesController.getAllCategories);
 router.get('/:id', categoriesController.getSingleCategory);
-router.post('/', categoriesController.createCategory);
-router.put('/:id', categoriesController.updateCategory);
+router.post('/', categoryValidationRules(), validate, categoriesController.createCategory);
+router.put('/:id', categoryValidationRules(), validate, categoriesController.updateCategory);
 router.delete('/:id', categoriesController.deleteCategory);
 
 module.exports = router;
+
